# pflanzn

./: .env.example  .env.sample  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  docker-compose.yml.example  docker-compose.yml.future
.github/workflows/: build-images.yml  release.yml
backend/: .dockerignore  Dockerfile  README.md  conftest.py  pyproject.toml  requirements.txt  ruff.toml
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/api/routes/: audit.py  auth.py  config.py  locations.py  plants.py  share.py  statistics.py  tags.py  uploads.py  users.py  weather.py
backend/app/core/: audit.py  audit_middleware.py  config.py  security.py
backend/app/services/: anthropic.py  huggingface.py  huggingface_service.py  llm_client.py  mistralai.py  ollama.py  openai.py  plantnet.py  plantnet_service.py  prompt_config.py  weather_service.py
backend/app/utils/: exif.py  llm_text_cleaner.py  uploads.py
backend/tests/: test_audit.py  test_auth.py  test_plants.py  test_share.py
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vitest.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  global.css  main.tsx  overlayControl.ts
frontend/src/components/: AdminPanel.tsx  AuditPanel.tsx  AuthSplash.tsx  BottomNav.tsx  Calendar.tsx  Description.tsx  EditableDiv.tsx  ErrorBoundary.tsx  Footer.tsx  IdentificationsPanel.tsx  IdentifyResults.tsx  LoadingOverlay.tsx  (+20 more)
frontend/vite/: chunk-split.ts
(+72 files in other folders)
